--- a/notes/TFT_Mech.ipynb
+++ b/notes/TFT_Mech.ipynb
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3a2ef412",
    "metadata": {},
    "outputs": [
@@ -529,12 +529,13 @@
     "plt.grid()\n",
     "plt.xlabel(r\"$t$\", fontsize=16)\n",
     "plt.ylabel(r\"$x$\", fontsize=16)\n",
+    "plt.savefig(\"../plot/01_position.png\", dpi=300)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "973052d9",
    "metadata": {},
    "outputs": [
@@ -560,12 +561,13 @@
     "plt.grid()\n",
     "plt.xlabel(r\"$t$\", fontsize=16)\n",
     "plt.ylabel(r\"$v$\", fontsize=16)\n",
+    "plt.savefig(\"../plot/02_velocity.png\", dpi=300)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "6be791a1",
    "metadata": {},
    "outputs": [
@@ -591,12 +593,13 @@
     "plt.grid()\n",
     "plt.xlabel(r\"$t$\", fontsize=16)\n",
     "plt.ylabel(r\"$a$\", fontsize=16)\n",
+    "plt.savefig(\"../plot/03_acceleration.png\", dpi=300)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "62a637a1",
    "metadata": {},
    "outputs": [
@@ -622,6 +625,7 @@
     "plt.grid()\n",
     "plt.xlabel(r\"$t$\", fontsize=16)\n",
     "plt.ylabel(r\"$E$\", fontsize=16)\n",
+    "plt.savefig(\"../plot/04_energy.png\", dpi=300)\n",
     "plt.show()"
    ]
   },
@@ -1921,7 +1925,12 @@
    "source": [
     "predictions, x_p = best_model2.predict(dl_val, return_x=True)\n",
     "predictions_vs_actuals = best_model2.calculate_prediction_actual_by_variable(x_p, predictions)\n",
-    "best_model2.plot_prediction_actual_by_variable(predictions_vs_actuals);"
+    "fig = best_model2.plot_prediction_actual_by_variable(predictions_vs_actuals);\n",
+    "fig.set_dpi(300)\n",
+    "fig.set_figwidth(10)\n",
+    "fig.set_figheight(6)\n",
+    "fig.savefig(\"tft_loss.png\")\n",
+    "fig.show()"
    ]
   },
   {
@@ -2812,7 +2821,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
